eda-ghc and eda-jtc updated

--- a/notebooks/eda-jtc.ipynb
+++ b/notebooks/eda-jtc.ipynb
@@ -2,8 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f72f95b7-f78e-42b5-abcc-02f0e2d6b2cc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/app\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/abhi/venv/lib/python3.10/site-packages/IPython/core/magics/osm.py:417: UserWarning: This is now an optional IPython functionality, setting dhist requires you to install the `pickleshare` library.\n",
+      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "219a2a02-00e1-4b85-82c2-81a8ff15d737",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a98b3b20-ee99-43b3-8962-e3178bc6f33c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "train_df = pd.read_csv(\"./data/raw/jogsaw-toxic-comments/train.csv\")\n",
+    "test_df = pd.read_csv(\"./data/raw/jogsaw-toxic-comments/test.csv\")\n",
+    "test_labels_df = pd.read_csv(\"./data/raw/jogsaw-toxic-comments/test_labels.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a7583e6e-12fe-43f1-a046-b3ea8a5827cd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_df.shape=(159571, 8)\n",
+      "test_df.shape=(153164, 2)\n",
+      "test_labels_df.shape=(153164, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{train_df.shape=}\")\n",
+    "print(f\"{test_df.shape=}\")\n",
+    "print(f\"{test_labels_df.shape=}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eac186f3-a1a4-4823-a070-6f7c59871951",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b241208-6661-41b4-856b-4940448cedfe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb67957e-d8fc-4936-8f0e-d1a8e1587ae1",
    "metadata": {},
    "outputs": [],
    "source": []
