eda twitter updated

--- a/notebooks/eda-twitter.ipynb
+++ b/notebooks/eda-twitter.ipynb
@@ -703,8 +703,439 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "05bd632c-343d-4ed6-837b-3318c1f9f7f9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"./data/raw/twitter/cyberbullying_tweets.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1678ab74-aee4-47a6-b9cb-c05e0ca4d783",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df.shape=(47692, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{df.shape=}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cb718f10-0af3-4b8e-af60-5f20b0ac62af",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9538.4"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "(len(df) - (len(df) * 0.2)) * 0.25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ed23e574-9c1b-4eed-9271-419c5a7eab52",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_text</th>\n",
+       "      <th>cyberbullying_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Best pick up line? Hi, you're cute... ?: I lov...</td>\n",
+       "      <td>not_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16939</th>\n",
+       "      <td>@AyshaRenna why don't you raise your voice whe...</td>\n",
+       "      <td>religion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9993</th>\n",
+       "      <td>RT @IWantMooro: I'm sorry. Call me sexist but ...</td>\n",
+       "      <td>gender</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31972</th>\n",
+       "      <td>No bc he would be the type of person 2 bully m...</td>\n",
+       "      <td>age</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5208</th>\n",
+       "      <td>I added a video to a @YouTube playlist https:/...</td>\n",
+       "      <td>not_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27050</th>\n",
+       "      <td>The scope of the problem can discourage people...</td>\n",
+       "      <td>other_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>964</th>\n",
+       "      <td>@shanley #killallmen</td>\n",
+       "      <td>not_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17410</th>\n",
+       "      <td>If anyone is forcing you to something and just...</td>\n",
+       "      <td>religion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10110</th>\n",
+       "      <td>A female friend always calls my dance style un...</td>\n",
+       "      <td>gender</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31429</th>\n",
+       "      <td>Plz stop demonizing black women's sexuality k thx</td>\n",
+       "      <td>other_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3361</th>\n",
+       "      <td>RT @curdistani: A group protesting #OzgecanAsl...</td>\n",
+       "      <td>not_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35419</th>\n",
+       "      <td>Devious Kisses, the first steamy bully romance...</td>\n",
+       "      <td>age</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>COLÉGIOS ADVENTISTAS DE SÃO PAULO DISCUTEM O B...</td>\n",
+       "      <td>not_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28573</th>\n",
+       "      <td>http:/…</td>\n",
+       "      <td>other_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39826</th>\n",
+       "      <td>So black coffee used his entire hand and nerve...</td>\n",
+       "      <td>ethnicity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34524</th>\n",
+       "      <td>girls who bullied me in high school are emotio...</td>\n",
+       "      <td>age</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33669</th>\n",
+       "      <td>Intramurals, first year high school. I was pra...</td>\n",
+       "      <td>age</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4196</th>\n",
+       "      <td>@SexyDraco bullied for what??</td>\n",
+       "      <td>not_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19280</th>\n",
+       "      <td>U should be more worried about #Islamic terror...</td>\n",
+       "      <td>religion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34868</th>\n",
+       "      <td>Most of them aren’t even here for BTS but to l...</td>\n",
+       "      <td>age</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43286</th>\n",
+       "      <td>He went to Harvard Law School though? Dumb? RT...</td>\n",
+       "      <td>ethnicity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46946</th>\n",
+       "      <td>oh ur the first one there</td>\n",
+       "      <td>ethnicity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28583</th>\n",
+       "      <td>There's some good info in the Talk section on ...</td>\n",
+       "      <td>other_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14302</th>\n",
+       "      <td>dont feed me that bullshit about how a person ...</td>\n",
+       "      <td>gender</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5228</th>\n",
+       "      <td>@mikeofcc Slashing Net Neutrality \"won't chang...</td>\n",
+       "      <td>not_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43315</th>\n",
+       "      <td>Cuhz y’all weirdos gotta stop this nigger talk...</td>\n",
+       "      <td>ethnicity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26926</th>\n",
+       "      <td>@TheSoundDefense only the existence of a sexua...</td>\n",
+       "      <td>other_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21781</th>\n",
+       "      <td>Are ppl so high that they use #IslamophobiaInI...</td>\n",
+       "      <td>religion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39289</th>\n",
+       "      <td>cancel @tylerisbaby she’s a HIGH SCHOOL FUCKIN...</td>\n",
+       "      <td>age</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47020</th>\n",
+       "      <td>u gota love racism today in #america insted of...</td>\n",
+       "      <td>ethnicity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45714</th>\n",
+       "      <td>Bitch just called him a dumb nigger he said bi...</td>\n",
+       "      <td>ethnicity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44573</th>\n",
+       "      <td>bitch made niggers up my ass obsessed m****fuc...</td>\n",
+       "      <td>ethnicity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38500</th>\n",
+       "      <td>RULES TO TEACH YOUR KIDS: Never shake a hand s...</td>\n",
+       "      <td>age</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31494</th>\n",
+       "      <td>@codemastermm I'm epic at color coordination. ...</td>\n",
+       "      <td>other_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39979</th>\n",
+       "      <td>@Giordanno12 you agreed to a double or nothing...</td>\n",
+       "      <td>ethnicity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28454</th>\n",
+       "      <td>@SFtheWolf http://t.co/g7w5b4uSbW is the one I...</td>\n",
+       "      <td>other_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20234</th>\n",
+       "      <td>Are you people born stupid or did you have to ...</td>\n",
+       "      <td>religion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12215</th>\n",
+       "      <td>All right let's see who actually drops dub dbz...</td>\n",
+       "      <td>gender</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1551</th>\n",
+       "      <td>@gwallace17 Stafford need to perform tonight t...</td>\n",
+       "      <td>not_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36945</th>\n",
+       "      <td>Kante looks like the guy you could bully into ...</td>\n",
+       "      <td>age</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>751</th>\n",
+       "      <td>I can't handle another round of this crap #mkr</td>\n",
+       "      <td>not_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24896</th>\n",
+       "      <td>You piss me off so much.</td>\n",
+       "      <td>other_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2156</th>\n",
+       "      <td>“@kait_mitchell: Having a tour around bowland ...</td>\n",
+       "      <td>not_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41151</th>\n",
+       "      <td>@SunSteveBrenner I don't understand why he'd p...</td>\n",
+       "      <td>ethnicity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45411</th>\n",
+       "      <td>Finally ,FIR has been lodged against Rhea chak...</td>\n",
+       "      <td>ethnicity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25630</th>\n",
+       "      <td>@kencf0618 awesome! :D</td>\n",
+       "      <td>other_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21201</th>\n",
+       "      <td>WE NEED TO UNDERSTAND SHIA KILLING SUNNIIIN NA...</td>\n",
+       "      <td>religion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43271</th>\n",
+       "      <td>@NotHaiu fuck you dumb stinky nigger</td>\n",
+       "      <td>ethnicity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30647</th>\n",
+       "      <td>I hate the assholes who don't turn off there b...</td>\n",
+       "      <td>other_cyberbullying</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14615</th>\n",
+       "      <td>Boys that call girls ‘bitches’ and ‘females’ a...</td>\n",
+       "      <td>gender</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              tweet_text   cyberbullying_type\n",
+       "18     Best pick up line? Hi, you're cute... ?: I lov...    not_cyberbullying\n",
+       "16939  @AyshaRenna why don't you raise your voice whe...             religion\n",
+       "9993   RT @IWantMooro: I'm sorry. Call me sexist but ...               gender\n",
+       "31972  No bc he would be the type of person 2 bully m...                  age\n",
+       "5208   I added a video to a @YouTube playlist https:/...    not_cyberbullying\n",
+       "27050  The scope of the problem can discourage people...  other_cyberbullying\n",
+       "964                                 @shanley #killallmen    not_cyberbullying\n",
+       "17410  If anyone is forcing you to something and just...             religion\n",
+       "10110  A female friend always calls my dance style un...               gender\n",
+       "31429  Plz stop demonizing black women's sexuality k thx  other_cyberbullying\n",
+       "3361   RT @curdistani: A group protesting #OzgecanAsl...    not_cyberbullying\n",
+       "35419  Devious Kisses, the first steamy bully romance...                  age\n",
+       "92     COLÉGIOS ADVENTISTAS DE SÃO PAULO DISCUTEM O B...    not_cyberbullying\n",
+       "28573                                            http:/…  other_cyberbullying\n",
+       "39826  So black coffee used his entire hand and nerve...            ethnicity\n",
+       "34524  girls who bullied me in high school are emotio...                  age\n",
+       "33669  Intramurals, first year high school. I was pra...                  age\n",
+       "4196                       @SexyDraco bullied for what??    not_cyberbullying\n",
+       "19280  U should be more worried about #Islamic terror...             religion\n",
+       "34868  Most of them aren’t even here for BTS but to l...                  age\n",
+       "43286  He went to Harvard Law School though? Dumb? RT...            ethnicity\n",
+       "46946                          oh ur the first one there            ethnicity\n",
+       "28583  There's some good info in the Talk section on ...  other_cyberbullying\n",
+       "14302  dont feed me that bullshit about how a person ...               gender\n",
+       "5228   @mikeofcc Slashing Net Neutrality \"won't chang...    not_cyberbullying\n",
+       "43315  Cuhz y’all weirdos gotta stop this nigger talk...            ethnicity\n",
+       "26926  @TheSoundDefense only the existence of a sexua...  other_cyberbullying\n",
+       "21781  Are ppl so high that they use #IslamophobiaInI...             religion\n",
+       "39289  cancel @tylerisbaby she’s a HIGH SCHOOL FUCKIN...                  age\n",
+       "47020  u gota love racism today in #america insted of...            ethnicity\n",
+       "45714  Bitch just called him a dumb nigger he said bi...            ethnicity\n",
+       "44573  bitch made niggers up my ass obsessed m****fuc...            ethnicity\n",
+       "38500  RULES TO TEACH YOUR KIDS: Never shake a hand s...                  age\n",
+       "31494  @codemastermm I'm epic at color coordination. ...  other_cyberbullying\n",
+       "39979  @Giordanno12 you agreed to a double or nothing...            ethnicity\n",
+       "28454  @SFtheWolf http://t.co/g7w5b4uSbW is the one I...  other_cyberbullying\n",
+       "20234  Are you people born stupid or did you have to ...             religion\n",
+       "12215  All right let's see who actually drops dub dbz...               gender\n",
+       "1551   @gwallace17 Stafford need to perform tonight t...    not_cyberbullying\n",
+       "36945  Kante looks like the guy you could bully into ...                  age\n",
+       "751       I can't handle another round of this crap #mkr    not_cyberbullying\n",
+       "24896                           You piss me off so much.  other_cyberbullying\n",
+       "2156   “@kait_mitchell: Having a tour around bowland ...    not_cyberbullying\n",
+       "41151  @SunSteveBrenner I don't understand why he'd p...            ethnicity\n",
+       "45411  Finally ,FIR has been lodged against Rhea chak...            ethnicity\n",
+       "25630                             @kencf0618 awesome! :D  other_cyberbullying\n",
+       "21201  WE NEED TO UNDERSTAND SHIA KILLING SUNNIIIN NA...             religion\n",
+       "43271               @NotHaiu fuck you dumb stinky nigger            ethnicity\n",
+       "30647  I hate the assholes who don't turn off there b...  other_cyberbullying\n",
+       "14615  Boys that call girls ‘bitches’ and ‘females’ a...               gender"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sample(n=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "34d54aa4-ef96-4add-b188-fb5fa41e6ed8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['not_cyberbullying', 'gender', 'religion', 'other_cyberbullying',\n",
+       "       'age', 'ethnicity'], dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"cyberbullying_type\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1440e0c8-8338-4164-b6f2-fb21234fa21a",
    "metadata": {},
    "outputs": [],
    "source": []
