test notebook added

--- a/notebooks/check_stuff.ipynb
+++ b/notebooks/check_stuff.ipynb
@@ -59,7 +59,8 @@
    },
    "outputs": [],
    "source": [
-    "text = \"in te dhird qarter oflast jear he hadlearned ofca sekretplan\"\n"
+    "text = \"in te dhird qarter oflast jear he hadlearned ofca sekretplan\"\n",
+    "text = \"heisa god byo\""
    ]
   },
   {
